--- a/amazon/styles.css
+++ b/amazon/styles.css
@@ -16,7 +16,7 @@
     width:100px;
 }
 .logo{
-    background-image:url("amazon_logo.png");
+    background-image:url("Amazon/amazon_logo.png");
     background-size:cover;
     height:50px;
     width:100%;
@@ -128,7 +128,7 @@ span{
 }
 
 .hero-section{
-    background-image: url("hero_image.jpg");
+    background-image: url("Amazon/hero_image.jpg");
     background-size:cover;
     height:350px;
     display:flex;
@@ -234,7 +234,7 @@ ul a{
 }
 
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("Amazon/amazon_logo.png");
         background-size: cover;
         height: 50px;
         width: 100px;
